[package]
name = "noisimation"
version = "0.1.0"
authors = ["Aatif Syed <aatif.syed@metaswitch.com>"]
edition = "2018"
publish = ["metaswitch"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.19.0"
image = "0.23.14"
itertools-num = "0.1.3"
noise = "0.7.0"
structopt = "0.3.21"
strum = "0.20.0"
strum_macros = "0.20.1"
viuer = "0.4.0"
